updated captions for images

--- a/public/about.html
+++ b/public/about.html
@@ -71,18 +71,18 @@
 </section>
 <hr >
 <section >
-  <h3 class="text-center">My Ideal Summer</h3>
+  <h3 class="text-center">My Summer 2024</h3>
   <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner text-center">
         <div class="carousel-item active"> <img class="d-block w-100" src="images/s1-c.png" alt="First slide">
-          <p style="margin-bottom: 2rem;">Hike 9 Miles</p>
+          <p style="margin-bottom: 2rem;">Hiked 9 Miles - 09/12</p>
         </div>
         <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s2-c.png" alt="Second slide">
-          <p style="margin-bottom: 2rem;">Watch Sunset at the Beach</p>
+          <p style="margin-bottom: 2rem;">Watch Sunset at the Beach - 07/21</p>
         </div>
         <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s3-c.png" alt="Third slide">
-          <p style="margin-bottom: 2rem;">Rave</p>
+          <p style="margin-bottom: 2rem;">Rave 07/19</p>
         </div>
       </div>
       <ol class="carousel-indicators" style="margin: 0px !important;">
