--- a/public/about.html
+++ b/public/about.html
@@ -79,10 +79,10 @@
           <p style="margin-bottom: 2rem;">Hiked 9 Miles - 09/12</p>
         </div>
         <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s2-c.png" alt="Second slide">
-          <p style="margin-bottom: 2rem;">Watch Sunset at the Beach - 07/21</p>
+          <p style="margin-bottom: 2rem;">Watched Sunset at the Beach - 07/21</p>
         </div>
         <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s3-c.png" alt="Third slide">
-          <p style="margin-bottom: 2rem;">Rave 07/19</p>
+          <p style="margin-bottom: 2rem;">Went to a Rave - 07/19</p>
         </div>
       </div>
       <ol class="carousel-indicators" style="margin: 0px !important;">
