--- a/public/project.html
+++ b/public/project.html
@@ -50,6 +50,25 @@
       <div class="row">
         <div class="col-12 text-center">
           <h1>Project</h1>
+          <!-- add a reveal dropdown button -->
+          <button class="btn btn-primary" id="viewPDF" onclick="handleButton()">View Community Partner PDF ↴</button>
+          <script>
+            function handleButton() {
+              var pdf = document.getElementById('pdf');
+              var viewPDF = document.getElementById('viewPDF');
+              if (pdf.style.display === 'none') {
+                pdf.style.display = 'block';
+                viewPDF.innerHTML = 'Hide PDF ▴';
+              } else {
+                pdf.style.display = 'none';
+                viewPDF.innerHTML = 'View Community Partner PDF ↴';
+              }
+            }
+          </script>
+          <div class='embed-responsive' id="pdf" style='padding-bottom:80%; display: none;'>
+            <object data='/etc/CP Research.pdf' type='application/pdf' width='100%' height='100%'></object>
+          </div>
+
         </div>
       </div>
     </div>
@@ -78,6 +97,45 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap-4.4.1.js"></script>
+  <style>
+    #pdf {
+      animation: heightExpand 2s forwards;
+    }
+
+    #pdf[style*="display: none;"] {
+      animation: heightCollapse 3s;
+    }
+
+    #viewPDF {
+      margin: 6px;
+    }
+
+    .up_arrow {
+      transform: rotate(-90deg);
+      width: 10px;
+      height: 10px;
+    }
+
+    @keyframes heightCollapse {
+      from {
+        padding-bottom: 80%;
+      }
+
+      to {
+        padding-bottom: 0%;
+      }
+    }
+
+    @keyframes heightExpand {
+      from {
+        padding-bottom: 0%;
+      }
+
+      to {
+        padding-bottom: 80%;
+      }
+    }
+  </style>
 </body>
 
 </html>
