--- a/public/project.html
+++ b/public/project.html
@@ -20,14 +20,14 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
         <li class="nav-item"> <a class="nav-link" href="about">Biography<span class="sr-only">(current)</span></a> </li>
-        <li class="nav-item"> <a class="nav-link" href="project">Project</a> </li>
+        <li class="nav-item"> <a class="nav-link active" href="project">Project</a> </li>
         <li class="nav-item dropdown" style="display: none"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Project Page</a> <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item active"> <a class="nav-link" href="contact">Contact</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="contact">Contact</a> </li>
       </ul>
     </div>
   </nav>
