--- a/public/about.html
+++ b/public/about.html
@@ -58,7 +58,7 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-lg-6"> <img src="images/Headshot.jpg" alt="..." class="rounded-circle img-fluid" style="width: 250px;"> </div>
+      <div class="col-lg-6"> <img loading="eager" src="images/Headshot.jpg" alt="..." class="rounded-circle img-fluid" style="width: 250px;"> </div>
       <div class="col-lg-6">
         <h5 style="line-height: calc(8 / 3 * 1em);">Hello, my name is <strong>Austin Kim</strong>. <br>
           I am currently a <strong>junior-level student</strong> <br>
@@ -75,13 +75,13 @@
   <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner text-center">
-        <div class="carousel-item active"> <img class="d-block w-100" src="images/s1-c.png" alt="First slide">
+        <div class="carousel-item active"> <img loading="eager" class="d-block w-100" src="images/s1-c.png" alt="First slide">
           <p style="margin-bottom: 2rem;">Hiked 9 Miles - 09/12</p>
         </div>
-        <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s2-c.png" alt="Second slide">
+        <div class="carousel-item"> <img  class="d-block w-100" src="images/s2-c.png" alt="Second slide">
           <p style="margin-bottom: 2rem;">Watched Sunset at the Beach - 07/21</p>
         </div>
-        <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s3-c.png" alt="Third slide">
+        <div class="carousel-item"> <img class="d-block w-100" src="images/s3-c.png" alt="Third slide">
           <p style="margin-bottom: 2rem;">Went to a Rave - 07/19</p>
         </div>
       </div>
