--- a/public/project.html
+++ b/public/project.html
@@ -87,6 +87,13 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
+          <a href="https://github.com/austinkimchi" target="_blank" rel="noopener noreferrer">
+            <img src="images/github.svg" alt="Github" width="48" height="48">
+          </a>
+
+          <a href="https://www.linkedin.com/in/austinkimchi/" target="_blank" rel="noopener noreferrer">
+            <img src="images/linkedin.svg" alt="LinkedIn" width="48" height="48">
+          </a>
           <p>© 2025 Austin Kim</p>
         </div>
       </div>
