--- a/public/contact.html
+++ b/public/contact.html
@@ -10,10 +10,13 @@
   <script>
     function getFormElement() {
       const formEle = document.getElementById("form-handler");
+      const errorText = document.createElement("p");
       const navigationData = window.performance.getEntries().find(e => e.entryType === "navigation")
 
       if (navigationData.responseStatus == 202) {
         formEle.innerHTML = "<h2>Thank you for your submission!</h2><p>We will get back to you as soon as possible.</p>";
+      } else if (navigationData.responseStatus == 400) {
+        formEle.innerHTML = "<h2>Submission failed!</h2><p>You did not fill out all the fields</p>";
       }
     }
 
@@ -140,7 +143,10 @@
     }
 
     var onloadCallback = function () {
-      alert("grecaptcha is ready!");
+      grecaptcha.render('submit', {
+        'sitekey': '6LeDhFEqAAAAAAF2rOdzQ7XFguoJ9r8P3kE8Y7yz',
+        'callback': onSubmit
+      });
     };
 
   </script>
