--- a/public/contact.html
+++ b/public/contact.html
@@ -147,6 +147,7 @@
         'sitekey': '6LeDhFEqAAAAAAF2rOdzQ7XFguoJ9r8P3kE8Y7yz',
         'callback': onSubmit
       });
+      console.log("reCAPTCHA has been rendered");
     };
 
   </script>
