--- a/public/contact.html
+++ b/public/contact.html
@@ -138,10 +138,14 @@
       document.getElementById("form-handler").submit();
     }
 
+    function cb (token) {
+      document.getElementById("submit").disabled = false;
+    }
+
     var onloadCallback = function () {
       grecaptcha.render('submit', {
         'sitekey': '6LeDhFEqAAAAAAF2rOdzQ7XFguoJ9r8P3kE8Y7yz',
-        'callback': onSubmit
+        'callback': cb
       });
       console.log("reCAPTCHA has been rendered");
     };
