--- a/public/contact.html
+++ b/public/contact.html
@@ -46,7 +46,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="about">Biography<span class="sr-only">(current)</span></a> </li>
+        <li class="nav-item"> <a class="nav-link" href="about">About Us<span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="project">Project</a> </li>
         <li class="nav-item dropdown" style="display: none"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Project Page</a> <a class="dropdown-item" href="#">Another action</a>
