--- a/public/about.html
+++ b/public/about.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
-        <li class="nav-item active"> <a class="nav-link" href="about">Biography<span class="sr-only">(current)</span></a> </li>
+        <li class="nav-item active"> <a class="nav-link" href="about">About Us<span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="project">Project</a> </li>
         <li class="nav-item dropdown" style="display: none"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Project Page</a> <a class="dropdown-item" href="#">Another action</a>
@@ -70,6 +70,53 @@
         </div>
       </div>
     </div>
+  </section>
+  <hr>
+  <section>
+    <h3 class="text-center">My Team Member</h3>
+    <div class="container d-flex justify-content-center">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="card" style="width: 18rem;"> <img src="images/Cropped_DylanOlson.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Dylan Olson</h5>
+              <p class="card-text">Electrical Engineering</p>
+              <a href="https://sites.google.com/scu.edu/engr110do/?pli=1&authuser=1" class="btn btn-primary">Website</a>
+              <a href="https://www.linkedin.com/in/dylan-olson-4ba4a5192" target="_blank" rel="noopener noreferrer">
+                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="card" style="width: 18rem;"> <img src="images/200x200.gif" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Team Member 2</h5>
+              <p class="card-text">Major</p>
+              <a href="http://www.webpage.com/" class="btn btn-primary">Website</a>
+              <a href="https://www.linkedin.com/in/USERNAME" target="_blank" rel="noopener noreferrer">
+                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="card" style="width: 18rem;"> <img src="images/200x200.gif" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Team Member 3</h5>
+              <p class="card-text">Major</p>
+              <a href="http://www.webpage.com/" class="btn btn-primary">Website</a>
+              <a href="https://www.linkedin.com/in/USERNAME" target="_blank" rel="noopener noreferrer">
+                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
+              </a>
+             </div>
+          </div>
+        </div>
+
+        </div>
+      </div>
   </section>
   <hr>
   <section>
