Put image erick

--- a/public/about.html
+++ b/public/about.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="card" style="width: 18rem;"> <img src="images/200x200.gif" class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;"> <img src="images/ERICK_LOPEZ_CROP.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Erick Ricardo Lopez</h5>
               <p class="card-text">Mechanical Engineer</p>
