--- a/public/about.html
+++ b/public/about.html
@@ -73,7 +73,7 @@
   </section>
   <hr>
   <section>
-    <h3 class="text-center">My Team Member</h3>
+    <h3 class="text-center">My Team Members</h3>
     <div class="container d-flex justify-content-center">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-12">
