added team members

--- a/public/about.html
+++ b/public/about.html
@@ -103,12 +103,12 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="card" style="width: 18rem;"> <img src="images/200x200.gif" class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;"> <img src="images/TiffanyDoan.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Team Member 3</h5>
-              <p class="card-text">Major</p>
-              <a href="http://www.webpage.com/" class="btn btn-primary">Website</a>
-              <a href="https://www.linkedin.com/in/USERNAME" target="_blank" rel="noopener noreferrer">
+              <h5 class="card-title">Tiffany Doan</h5>
+              <p class="card-text">General Engineer</p>
+              <a href="https://tydoanengr110.weebly.com/" class="btn btn-primary">Website</a>
+              <a href="https://www.linkedin.com/in/tiffydoan" target="_blank" rel="noopener noreferrer">
                 <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
               </a>
              </div>
