--- a/public/project.html
+++ b/public/project.html
@@ -69,15 +69,19 @@
             <object data='/etc/CP Research.pdf' type='application/pdf' width='100%' height='100%'></object>
           </div>
 
+
         </div>
       </div>
     </div>
   </section>
   <section class="align-content-center">
     <div class="container">
-      <div class="row">
+      <div class="row text-center justify-center  ">
         <div class="col-12 text-center">
-          <p>Project information will be updated here.</p>
+          <h3><img src="./images/ForgeGardenSquare.png" alt="Forge Garden Logo" width="100">&ThickSpace;Forge Garden Community Project:</h3>
+        </div>
+        <div class="col-12 text-center">
+          <p>More information will be posted here.</p>
         </div>
       </div>
     </div>
