--- a/public/project.html
+++ b/public/project.html
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row text-center justify-center  ">
         <div class="col-12 text-center">
-          <h3><img src="./images/ForgeGardenSquare.png" alt="Forge Garden Logo" width="100">&ThickSpace;Forge Garden Community Project:</h3>
+          <h3><img src="./images/ForgeGardenSquare.png" alt="Forge Garden Logo" width="100">&ThickSpace;SCU &#65368; Forge Garden</h3>
         </div>
         <div class="col-12 text-center">
           <p>More information will be posted here.</p>
