--- a/public/home.html
+++ b/public/home.html
@@ -1,193 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Engineering 110 Notebook</title>
-<link rel="icon" type="image/x-con" href="images/Default-Website Icon.svg">
-<link rel="preload" as="image" href="images">
-<!-- Bootstrap -->
-<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SCU &#65368; Forge Garden</title>
+  <link rel="icon" type="image/x-con" href="images/Default-Website Icon.svg">
+  <link rel="preload" as="image" href="images">
+  <!-- Bootstrap -->
+  <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">ENGR110 Notebook</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active"> <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a> </li>
-      <li class="nav-item"> <a class="nav-link" href="about">About Us</a> </li>
-      <li class="nav-item"> <a class="nav-link" href="project">Project</a> </li>
-      <li class="nav-item dropdown" style="display: none"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Project Page</a> <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a> </div>
-      </li>
-      <li class="nav-item"> <a class="nav-link" href="contact">Contact</a> </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0" style="display: none">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<section>
-  <div class="jumbotron text-center mt-2">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">SCU &#65368; Forge Garden</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active"> <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a> </li>
+        <li class="nav-item"> <a class="nav-link" href="about">Team</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="project">Project</a> </li>
+        <li class="nav-item dropdown" style="display: none"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Project Page</a> <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item"> <a class="nav-link" href="contact">Contact</a> </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0" style="display: none">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <section>
+    <div class="jumbotron text-center mt-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Welcome to my Engineering-110 Project Page</h1>
+            <p>This page will regularly be updated with recent information from The Forge Garden!</p>
+            <p><a class="btn btn-primary btn-lg" href="./about" role="button">Meet the Team »</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-primary btn-lg" href="./Project" role="button">Project »</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <h1>Welcome to my Engineering 110 Project Page</h1>
-          <p>I will regularly update this page throughout Fall 2024 quarter. <br>
-            This page will have information below once I have selected the project I am assigned to. </p>
-          <p><a class="btn btn-primary btn-lg" href="./Project" role="button">Project »</a></p>
+        <div class="col-12 text-center">
+          <h1>Photos from project</h1>
+          <!-- <p>Will put captions description</p>-->
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container mt-2">
+      <div class="row" style="display: none">
+        <div class="col-md-4 col-12">
+          <ul class="list-unstyled">
+            <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 col-12">
+          <ul class="list-unstyled">
+            <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 col-12">
+          <ul class="list-unstyled">
+            <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <p>Coming soon!</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/400x400.gif" alt="">
+          <h4>Photo 1</h4>
+          <h6>Caption 1</h6>
+        </div>
+        <div class="col-md-6 col-12 text-center mt-md-0 mt-2"> <img class="img-fluid" src="images/400x400.gif" alt="">
+          <h4>Photo 2</h4>
+          <h6>Caption 2</h6>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1>Questions or Inquiries?</h1>
+          <p>Fill out the form below to get in touch.</p>
+          <button onclick="sendToForm()" type="button" class="btn btn-success">Contact Form</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr style="display: none">
+  <div class="section" style="display: none">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-12">
+          <h3 class="text-center">WHO WE ARE</h3>
+          <p></p>
+        </div>
+        <div class="col-md-4 col-12">
+          <h3 class="text-center">GET IN TOUCH</h3>
+          <address class="text-center">
+            <strong>Project in part with,</strong><br>
+            Santa Clara University,<br>
+            CA, 91308-4075, US<br>
+            <abbr title="Phone">P:</abbr> (123) 456-7890
+          </address>
+        </div>
+        <div class="col-md-4 col-12">
+          <h3 class="text-center">NEWSLETTER</h3>
+          <form>
+            <div class="form-group col-12">
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+              <button type="submit" class="btn btn-dark mt-2">Subscribe</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h1>Photos from project</h1>
-        <!-- <p>Will put captions description</p>--> 
-      </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container mt-2">
-    <div class="row" style="display: none">
-      <div class="col-md-4 col-12">
-        <ul class="list-unstyled">
-          <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-            <div class="media-body">
-              <h5 class="mt-0 mb-1">List-based media object</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. </div>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-4 col-12">
-        <ul class="list-unstyled">
-          <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-            <div class="media-body">
-              <h5 class="mt-0 mb-1">List-based media object</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. </div>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-4 col-12">
-        <ul class="list-unstyled">
-          <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-            <div class="media-body">
-              <h5 class="mt-0 mb-1">List-based media object</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <p>Coming soon!</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/400x400.gif" alt="">
-        <h4>Photo 1</h4>
-        <h6>Caption 1</h6>
-      </div>
-      <div class="col-md-6 col-12 text-center mt-md-0 mt-2"> <img class="img-fluid" src="images/400x400.gif" alt="">
-        <h4>Photo 2</h4>
-        <h6>Caption 2</h6>
-      </div>
-    </div>
-    <div class="row mt-2">
-      <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-      <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-      <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-      <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-      <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-      <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-      <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-    </div>
-  </div>
-</section>
-<hr>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h1>Questions or Inquiries?</h1>
-        <p>Fill out the form below to get in touch.</p>
-        <button onclick="sendToForm()" type="button" class="btn btn-success">Contact Form</button>
-      </div>
-    </div>
-  </div>
-</section>
-<hr style="display: none">
-<div class="section" style="display: none">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-12" >
-        <h3 class="text-center">WHO WE ARE</h3>
-        <p></p>
-      </div>
-      <div class="col-md-4 col-12">
-        <h3 class="text-center">GET IN TOUCH</h3>
-        <address class="text-center">
-        <strong>Project in part with,</strong><br>
-        Santa Clara University,<br>
-        CA, 91308-4075, US<br>
-        <abbr title="Phone">P:</abbr> (123) 456-7890
-        </address>
-      </div>
-      <div class="col-md-4 col-12">
-        <h3 class="text-center">NEWSLETTER</h3>
-        <form>
-          <div class="form-group col-12">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-            <button type="submit" class="btn btn-dark mt-2">Subscribe</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-<hr>
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <a href="https://github.com/austinkimchi" target="_blank" rel="noopener noreferrer">
-          <img src="images/github.svg" alt="Github" width="48" height="48">
-        </a>
+  <hr>
+  <footer class="text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <a href="https://github.com/austinkimchi" target="_blank" rel="noopener noreferrer">
+            <img src="images/github.svg" alt="Github" width="48" height="48">
+          </a>
 
-        <a href="https://www.linkedin.com/in/austinkimchi/" target="_blank" rel="noopener noreferrer">
-          <img src="images/linkedin.svg" alt="LinkedIn" width="48" height="48">
-        </a>
-        <p>© 2025 Austin Kim</p>
+          <a href="https://www.linkedin.com/in/austinkimchi/" target="_blank" rel="noopener noreferrer">
+            <img src="images/linkedin.svg" alt="LinkedIn" width="48" height="48">
+          </a>
+          <p>© 2025 Austin Kim</p>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-3.4.1.min.js"></script> 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/popper.min.js"></script> 
-<script src="js/bootstrap-4.4.1.js"></script> 
-<script>
-		  function sendToForm(){
-			  window.location = "./contact"
-		  }
-	  </script>
+  </footer>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap-4.4.1.js"></script>
+  <script>
+    function sendToForm() {
+      window.location = "./contact"
+    }
+  </script>
 </body>
+
 </html>
