Header & nav, with grammer fix and personal change

--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Author | Engineering 110 Notebook</title>
+  <title>Author | SCU &#65368; Forge Garden</title>
   <link rel="icon" type="image/x-con" href="images/Default-Website Icon.svg">
   <link rel="preload" as="image" href="images">
   <!-- Bootstrap -->
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">ENGR110 Notebook</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/">SCU &#65368; Forge Garden</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
-        <li class="nav-item active"> <a class="nav-link" href="about">About Us<span class="sr-only">(current)</span></a> </li>
+        <li class="nav-item active"> <a class="nav-link" href="about">Team<span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="project">Project</a> </li>
         <li class="nav-item dropdown" style="display: none"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Project Page</a> <a class="dropdown-item" href="#">Another action</a>
@@ -52,7 +52,7 @@
     <div class="container jumbotron">
       <div class="row">
         <div class="col-12 text-center">
-          <h1>About Me!</h1>
+          <h1>About Us!</h1>
         </div>
       </div>
     </div>
@@ -81,9 +81,10 @@
             <div class="card-body">
               <h5 class="card-title">Dylan Olson</h5>
               <p class="card-text">Electrical Engineering</p>
-              <a href="https://sites.google.com/scu.edu/engr110do/?pli=1&authuser=1" class="btn btn-primary">Website</a>
+              <p class="card-text">A senior student at SCU. Spent time working for the US military working with RF devices and capabilities. Intends to get masters in electrical engineering with a focus on RF engineering and applied electromagnetics.</p>
+              <a href="https://sites.google.com/scu.edu/engr110do/?pli=1&authuser=1" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Website</a>
               <a href="https://www.linkedin.com/in/dylan-olson-4ba4a5192" target="_blank" rel="noopener noreferrer">
-                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
+                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;">
               </a>
             </div>
           </div>
@@ -94,9 +95,10 @@
             <div class="card-body">
               <h5 class="card-title">Erick Ricardo Lopez</h5>
               <p class="card-text">Mechanical Engineer</p>
-              <a href="https://sites.google.com/view/six8two/landing-page" class="btn btn-primary">Website</a>
+              <p class="card-text">A junior student at SCU, who grew up in Fairfield, CA his entire life. Expierence in computer repair and assembly while having a strong background in Information Technology & Media Services.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+              <a href="https://sites.google.com/view/six8two/landing-page" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Website</a>
               <a href="https://www.linkedin.com/in/erick-lopez-88b05a27a/" target="_blank" rel="noopener noreferrer">
-                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
+                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;">
               </a>
             </div>
           </div>
@@ -107,16 +109,17 @@
             <div class="card-body">
               <h5 class="card-title">Tiffany Doan</h5>
               <p class="card-text">General Engineer</p>
-              <a href="https://tydoanengr110.weebly.com/" class="btn btn-primary">Website</a>
+              <p class="card-text">A junior student at SCU, from Long Beach, Mississippi. A first-generation college student that enjoys traveling and trying new foods.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+              <a href="https://tydoanengr110.weebly.com/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Website</a>
               <a href="https://www.linkedin.com/in/tiffydoan" target="_blank" rel="noopener noreferrer">
-                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;"> 
+                <img src="images/linkedinBlue.svg" title="linkedin" width="48" height="48" style="z-index: 1;">
               </a>
-             </div>
+            </div>
           </div>
         </div>
 
-        </div>
       </div>
+    </div>
   </section>
   <hr>
   <section>
